# CodeCheck

./: .dockerignore  AGENT_LOG.md  Dockerfile  Makefile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  docker-compose.yml  pyproject.toml
.codecheck/: rules.yaml
.github/workflows/: ci.yml
src/codecheck/: __init__.py  __main__.py
src/codecheck/agent/: __init__.py  context.py  loop.py  parser.py
src/codecheck/cli/: __init__.py  config_cmd.py  main.py  review.py
src/codecheck/config/: __init__.py  loader.py  schema.py
src/codecheck/credentials/: __init__.py  prompt.py  store.py
src/codecheck/feedback/: __init__.py  backup.py  loop.py  reporter.py  verifier.py
src/codecheck/guardrails/: __init__.py  guard.py
src/codecheck/hooks/: __init__.py  pre_commit.py
src/codecheck/llm/: __init__.py  deepseek_provider.py  exceptions.py  mock_provider.py  (+1 more)
tests/: __init__.py  test_cli_smoke.py
tests/agent/: __init__.py  test_loop.py  test_parser.py
tests/cli/: __init__.py  test_config.py  test_review.py
tests/config/: __init__.py  test_loader.py
tests/credentials/: __init__.py  test_store.py
tests/feedback/: __init__.py  test_backup.py  test_loop.py  test_verifier.py
tests/guardrails/: __init__.py  test_guard.py
tests/hooks/: __init__.py  test_pre_commit.py
tests/llm/: __init__.py  test_deepseek.py  test_provider.py
tests/memory/: __init__.py  test_sqlite_store.py
tests/rules/: __init__.py  test_deterministic.py  test_engine.py  test_llm_assisted.py
tests/tools/: __init__.py  test_file_tools.py  test_git_tools.py  test_registry.py  test_shell_tools.py
tools/: demo.py
(+17 files in other folders)
